--- a/src/br/com/view/Gerencial.fxml
+++ b/src/br/com/view/Gerencial.fxml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.controller.GerencialController">
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.controller.GerencialController">
    <children>
       <Button fx:id="btClientes" layoutX="549.0" layoutY="277.0" mnemonicParsing="false" prefHeight="124.0" prefWidth="182.0" text="Clientes" />
       <Button fx:id="btAgenda" layoutX="793.0" layoutY="277.0" mnemonicParsing="false" prefHeight="124.0" prefWidth="182.0" text="Agenda" />
