--- a/src/br/com/view/ListarClientes.fxml
+++ b/src/br/com/view/ListarClientes.fxml
@@ -8,9 +8,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="876.0" prefWidth="1657.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.controller.ListarClientesController">
+<AnchorPane id="AnchorPane" prefHeight="876.0" prefWidth="1657.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.controller.ListarClientesController">
    <children>
-      <TableView fx:id="tabelaListaClientes" layoutX="97.0" layoutY="76.0" prefHeight="620.0" prefWidth="1160.0">
+      <TableView fx:id="tabelaListaClientes" layoutX="97.0" layoutY="76.0" prefHeight="620.0" prefWidth="1160.0" styleClass="tree-table-view">
         <columns>
           <TableColumn fx:id="clmId" prefWidth="100.0" text="Cód. Cliente" />
           <TableColumn fx:id="clmRazaoSocial" prefWidth="290.0" text="Razão Social" />
